# nnom

./: .gitignore  .travis.yml  404.html  LICENSE  README.md  SConscript  index.html  mkdocs.yml  pyproject.toml  requirements.dev.txt  search.html  sitemap.xml
A Temporary Guide to NNoM/: index.html
A_Temporary_Guide_to_NNoM/: index.html
Porting and Optimisation Guide/: index.html
Porting_and_Optimisation_Guide/: index.html
api_activations/: index.html
api_construction/: index.html
api_evaluation/: index.html
api_layers/: index.html
api_merge/: index.html
api_model/: index.html
api_nnom/: index.html
api_nnom_utils/: index.html
api_pooling/: index.html
api_properties/: index.html
api_tensor/: index.html
docs/: A Temporary Guide to NNoM.md  A_Temporary_Guide_to_NNoM.md  Porting and Optimisation Guide.md  Porting_and_Optimisation_Guide.md  api_activations.md  api_construction.md  api_evaluation.md  api_layers.md  api_merge.md  api_model.md  api_nnom.md  api_nnom_utils.md  api_pooling.md  api_properties.md  api_tensor.md  example_mnist_simple_cn.md  guide_5_min_to_nnom.md  guide_development.md  index.md  legacy_README.md  rt-thread_guide.md
example_mnist_simple_cn/: index.html
examples/: README.md
guide_5_min_to_nnom/: index.html
guide_development/: index.html
inc/: nnom.h  nnom_activations.h  nnom_evaluation.h  nnom_layers.h  nnom_local.h  nnom_out_shape.h  nnom_run.h  nnom_tensor.h  nnom_utils.h
legacy_README/: index.html
port/: nnom_port.h
porting/: nnom_porting.h
rt-thread_guide/: index.html
scripts/: README.MD  __init__.py  (+5 more)
(+180 files in other folders)
